--- a/ACP_WITH PYTHON V2.ipynb
+++ b/ACP_WITH PYTHON V2.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "id": "W3vySRBqPUfY"
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "id": "kYtcrNcVaEql"
    },
@@ -119,13 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "VHAOUBlLaEnn",
-    "outputId": "101390c8-2347-4c0c-c116-70f1a9ccc636"
+    "outputId": "101390c8-2347-4c0c-c116-70f1a9ccc636",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -164,14 +165,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code utilise la classe `StandardScaler` de scikit-learn pour normaliser les données, en les centrant et en les réduisant à une distribution de moyenne 0 et d'écart-type 1. Il transforme ensuite les données d'entrée `X` selon cette normalisation et imprime le résultat."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "u70UqGnFaEkm",
-    "outputId": "9c4ade63-90d4-4a5c-e5a0-091467ca868a"
+    "outputId": "9c4ade63-90d4-4a5c-e5a0-091467ca868a",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -191,8 +200,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code utilise la bibliothèque NumPy pour vérifier que la normalisation a été effectuée correctement en imprimant la moyenne des données normalisées pour chaque caractéristique (colonne) de `Z`. Si la normalisation a été correctement appliquée, les moyennes devraient être proches de 0."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -215,14 +231,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code utilise également la bibliothèque NumPy pour vérifier que l'écart-type des données normalisées pour chaque caractéristique (colonne) de `Z` est proche de 1, confirmant ainsi que la standardisation a été correctement effectuée."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "83CX1cbqaEcW",
-    "outputId": "efbe8a5a-712c-4f37-a7e8-429b7e057eda"
+    "outputId": "efbe8a5a-712c-4f37-a7e8-429b7e057eda",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -243,8 +267,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code utilise la classe `PCA` de scikit-learn pour effectuer une analyse en composantes principales (ACP). Il instancie l'objet `PCA` avec le paramètre `svd_solver` défini à `'full'`, puis affiche les paramètres de l'objet instancié."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -265,18 +296,26 @@
     "#calculs\n",
     "coord = acp.fit_transform(Z)\n",
     "#nombre de composantes calculées\n",
-    "print(acp.n_components_) # 6\n"
+    "print(acp.n_components_) # 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code effectue l'analyse en composantes principales (ACP) sur les données normalisées `Z`. Il transforme les données en nouvelles coordonnées dans l'espace des composantes principales et imprime le nombre de composantes principales calculées, qui est ici de 6."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "8Qw2GNEcaEWl",
-    "outputId": "e2405807-5575-4dbe-f044-1d969ba201e7"
+    "outputId": "e2405807-5575-4dbe-f044-1d969ba201e7",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -293,8 +332,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code imprime les valeurs propres associées à chaque composante principale, représentant la variance expliquée par chaque composante dans l'analyse en composantes principales (ACP)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -318,14 +364,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code calcule les valeurs propres corrigées, également appelées valeurs propres corrigées de Kaiser, en multipliant les valeurs propres de l'ACP par (n-1)/n, où n est le nombre d'échantillons. Cela est souvent utilisé pour corriger les valeurs propres dans le contexte de l'ACP."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "wmy03FTeaERW",
-    "outputId": "db30f7a8-8a93-437c-b17b-d63d04e99c3c"
+    "outputId": "db30f7a8-8a93-437c-b17b-d63d04e99c3c",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -342,14 +396,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code calcule les valeurs propres corrigées en utilisant les valeurs singulières élevées au carré et en les divisant par le nombre d'échantillons, ce qui est une autre approche couramment utilisée pour obtenir les valeurs propres corrigées dans le cadre de l'ACP."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "XeNf8J3TaEO3",
-    "outputId": "64316978-4a94-46a0-e4aa-cd27d46f1543"
+    "outputId": "64316978-4a94-46a0-e4aa-cd27d46f1543",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -363,6 +425,13 @@
    "source": [
     "#proportion de variance expliquée\n",
     "print(acp.explained_variance_ratio_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code imprime les proportions de variance expliquée par chaque composante principale dans l'analyse en composantes principales (ACP)."
    ]
   },
   {
@@ -400,6 +469,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code trace un graphique appelé \"Scree plot\" qui affiche les valeurs propres ou les proportions de variance expliquée en fonction du numéro du facteur ou de la composante principale. Cela permet d'identifier visuellement le point où la variance expliquée commence à diminuer considérablement, ce qui peut aider à décider combien de composantes principales à conserver."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -408,7 +484,8 @@
      "height": 472
     },
     "id": "r226X2lOavTM",
-    "outputId": "eff272f5-9cb3-4e3c-ef14-7d33daacb164"
+    "outputId": "eff272f5-9cb3-4e3c-ef14-7d33daacb164",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -435,32 +512,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Yassine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "id": "uxgUraEjavQX"
-   },
-   "outputs": [],
-   "source": [
-    "#seuils pour test des bâtons brisés\n",
-    "bs = 1/numpy.arange(p,0,-1)\n",
-    "bs = numpy.cumsum(bs)\n",
-    "bs = bs[::-1]"
+    "Ce code trace un graphique qui montre le cumul de la variance expliquée en fonction du nombre de facteurs ou de composantes principales. Cette visualisation est utile pour déterminer combien de composantes principales conserver pour capturer une proportion souhaitée de la variance totale des données. Vous recherchez un point où la courbe commence à s'aplatir, ce qui indique que l'ajout de composantes supplémentaires n'ajoute pas beaucoup de variance expliquée supplémentaire."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "Ientcsc2avNV",
-    "outputId": "8e3431dc-de9d-41bd-bd2c-d3cd839e8943"
+    "id": "uxgUraEjavQX"
    },
    "outputs": [
     {
@@ -478,6 +537,10 @@
     }
    ],
    "source": [
+    "#seuils pour test des bâtons brisés\n",
+    "bs = 1/numpy.arange(p,0,-1)\n",
+    "bs = numpy.cumsum(bs)\n",
+    "bs = bs[::-1]\n",
     "#test des bâtons brisés\n",
     "print(pandas.DataFrame({'Val.Propre':eigval,'Seuils':bs}))"
    ]
