--- a/ACP_WITH PYTHON V2.ipynb
+++ b/ACP_WITH PYTHON V2.ipynb
@@ -546,6 +546,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "la première valeur propre (4.420858) dépasse le seuil (2.450000), ce qui suggère que la première composante principale est significative. De même, la deuxième valeur propre (0.856062) dépasse le seuil (1.450000), indiquant que la deuxième composante principale est également significative. Les autres valeurs propres ne dépassent pas leurs seuils respectifs, ce qui suggère qu'elles ne contribuent pas significativement à la structure des données."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
@@ -554,7 +561,8 @@
      "height": 947
     },
     "id": "IxjxXAMEavKJ",
-    "outputId": "4efe53e9-6e0a-44e8-f525-14ab80c76f2d"
+    "outputId": "4efe53e9-6e0a-44e8-f525-14ab80c76f2d",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -581,6 +589,13 @@
     "plt.plot([0,0],[-6,6],color='silver',linestyle='-',linewidth=1)\n",
     "#affichage\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code génère un graphique de positionnement des individus dans le premier plan principal, représenté par les deux premières composantes principales. Chaque individu est représenté par un point dans ce plan, positionné en fonction de ses coordonnées dans l'espace des composantes principales. Les étiquettes des observations sont placées à côté des points correspondants pour identifier chaque individu. Les axes du graphique représentent les axes principaux du premier plan principal."
    ]
   },
   {
@@ -627,6 +642,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ces valeurs représentent les contributions des individus à l'inertie totale, c'est-à-dire la variance totale des données. Chaque ligne de ce tableau donne la contribution d'un individu à l'inertie totale. Une contribution élevée indique que l'individu contribue fortement à la variance totale des données.\n",
+    "\n",
+    "Dans ce tableau :\n",
+    "- La colonne \"ID\" contient les identifiants des individus.\n",
+    "- La colonne \"d_i\" contient les contributions des individus à l'inertie totale.\n",
+    "\n",
+    "Par exemple, l'individu \"Voiture9\" a une contribution à l'inertie totale de 21.789657, ce qui signifie que cette voiture contribue fortement à la variance totale des données. En revanche, l'individu \"Voiture16\" a une contribution beaucoup plus faible de 0.684521 à l'inertie totale."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
@@ -634,7 +662,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "EAd_beFzavEW",
-    "outputId": "ac23d58d-13ae-4e2e-a6cc-b1e8feb6ffd4"
+    "outputId": "ac23d58d-13ae-4e2e-a6cc-b1e8feb6ffd4",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -672,6 +701,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ces valeurs représentent la qualité de représentation des individus dans les composantes principales, mesurée par le carré du cosinus (COS2). Le COS2 mesure la proportion de variance de l'individu expliquée par chaque composante principale.\n",
+    "\n",
+    "Dans ce tableau :\n",
+    "- La colonne \"id\" contient les identifiants des individus.\n",
+    "- Les colonnes \"COS2_1\", \"COS2_2\", etc., représentent le COS2 pour chaque individu dans les différentes composantes principales.\n",
+    "\n",
+    "Par exemple, pour \"Voiture1\", le COS2 dans la première composante principale est de 0.556218, ce qui signifie que 55.62% de la variance de cette voiture est expliquée par la première composante principale. Pour la deuxième composante principale, le COS2 est de 0.387670, ce qui signifie que 38.77% de la variance est expliquée par la deuxième composante principale."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
@@ -696,6 +738,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce calcul vérifie si la somme en ligne des COS2 pour chaque individu est égale à 1, ce qui est conforme à la théorie de l'ACP. Si le résultat de ce calcul est proche de 1 pour chaque individu, cela confirme que la variance de chaque individu est correctement répartie entre les différentes composantes principales."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
@@ -703,7 +752,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "WE1t0moTb-BO",
-    "outputId": "52c22b5a-0d3c-4e17-b83b-88f131366765"
+    "outputId": "52c22b5a-0d3c-4e17-b83b-88f131366765",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -741,6 +791,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ces valeurs représentent les contributions des individus aux axes principaux. Ces contributions mesurent l'importance relative des individus dans la définition de chaque composante principale.\n",
+    "\n",
+    "Dans ce tableau :\n",
+    "- La colonne \"id\" contient les identifiants des individus.\n",
+    "- Les colonnes \"CTR_1\", \"CTR_2\", etc., représentent les contributions des individus à chaque axe principal.\n",
+    "\n",
+    "Par exemple, pour \"Voiture1\", la contribution à la première composante principale (CTR_1) est de 0.057493, ce qui signifie que cette voiture contribue de manière significative à la définition de la première composante principale. De même, sa contribution à la deuxième composante principale (CTR_2) est de 0.206933."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
@@ -748,7 +811,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "CEki7XHib-un",
-    "outputId": "89e24b24-9d78-4358-a181-39f55289b2fa"
+    "outputId": "89e24b24-9d78-4358-a181-39f55289b2fa",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -765,6 +829,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce calcul vérifie si la somme des contributions des individus à chaque axe principal est égale à 1, ce qui est conforme à la théorie de l'ACP. Si le résultat de ce calcul est proche de 1 pour chaque axe principal, cela confirme que les contributions des individus sont correctement pondérées pour chaque axe principal."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
@@ -772,7 +843,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "5FF2uTNZb-rp",
-    "outputId": "7fbf3e0c-5b27-4c83-ac45-370218f38e05"
+    "outputId": "7fbf3e0c-5b27-4c83-ac45-370218f38e05",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -794,6 +866,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le champ `components_` de l'objet ACP contient les vecteurs propres (ou composantes principales) qui définissent les directions des axes principaux dans l'espace des variables d'origine. Chaque ligne de cette matrice représente un vecteur propre correspondant à une composante principale, et les colonnes représentent les variables d'origine.\n",
+    "\n",
+    "Imprimer ce champ affichera les vecteurs propres pour chaque composante principale, ce qui permet de visualiser comment chaque variable contribue à la définition des composantes principales."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
@@ -801,7 +882,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "zQxHHh7kb9-O",
-    "outputId": "c1768c6f-45bb-4403-89a7-d130a2365074"
+    "outputId": "c1768c6f-45bb-4403-89a7-d130a2365074",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -826,6 +908,15 @@
     " corvar[:,k] = acp.components_[k,:] * sqrt_eigval[k]\n",
     "#afficher la matrice des corrélations variables x facteurs\n",
     "print(corvar)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code calcule la corrélation entre les variables initiales et les axes principaux de l'ACP. Pour chaque variable, cette corrélation est calculée en multipliant les charges factorielles (composantes du vecteur propre) par la racine carrée de la valeur propre correspondante.\n",
+    "\n",
+    "Le résultat est une matrice où chaque ligne représente une variable et chaque colonne représente une composante principale. Chaque élément de la matrice indique la corrélation entre une variable et une composante principale."
    ]
   },
   {
